--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ license = {file = "LICENSE"}
 
 # Direct dependencies
 dependencies = [
-    'multiphenics'
+    'multiphenics',
+    'matplotlib'
 ]
