--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -36,6 +36,6 @@ jobs:
         run: |
           python -m pip install .
 
-      - name: Run test (MMS)
+      - name: Run example
         run: |
           python ./examples/EMI_example.py
