add test for running workflow in docker

--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ dependencies:
   - git
   - numpy
   - mpich
+  - scipy
   - conda-ecosystem-user-package-isolation
   - pip:
       - "git+https://github.com/multiphenics/multiphenics.git"
