--- a/.github/workflows/test-code-docker.yml
+++ b/.github/workflows/test-code-docker.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: install package
         run: |
-          python -m pip install .
+          python3 -m pip install .
 
       - name: Run example
         run: |
-          python ./examples/EMI_example.py
+          python3 ./examples/EMI_example.py
