--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -36,6 +36,10 @@ jobs:
         run: |
           python -m pip install .
 
-      - name: Run example
-        run: |
-          python ./examples/EMI_example.py
+      - name: Run demos (serial)
+        run: 
+          python3 -m pytest -n=2 -m serial --durations=10 python/demo/test.py
+      
+      - name: Run demos (MPI (np=2))
+        run: 
+          python3 -m pytest -m mpi --num-proc=2 python/demo/test.py
