--- a/.github/workflows/test-code-docker.yml
+++ b/.github/workflows/test-code-docker.yml
@@ -28,8 +28,8 @@ jobs:
       
       - name: Run demos (serial)
         run: 
-          python3 -m pytest -n=2 -m serial --durations=10 python/demo/test.py
+          python3 -m pytest -n=2 -m serial ./examples/test.py
       
       - name: Run demos (MPI (np=2))
         run: 
-          python3 -m pytest -m mpi --num-proc=2 python/demo/test.py
+          python3 -m pytest -m mpi --num-proc=2 ./examples/test.py
