--- a/benchmarks/emi_spectral/configfiles/config_50cells_10mu.yml
+++ b/benchmarks/emi_spectral/configfiles/config_50cells_10mu.yml
@@ -1,23 +1,20 @@
 # Numerical parameters 
 time_steps : 1
 dt : 0.01
-mesh_conversion_factor : 2.0e-4
+mesh_conversion_factor : 1.0e-4
 C_M : 1
 
-input_dir             : "meshes/ncells_50_size_5000/"
+input_dir             : "meshes/ncells_50_size_10000/"
 cell_tag_file         : "mesh.xdmf"
 facet_tag_file        : "facets.xdmf"
 intra_restriction_dir : "interior_restriction.rtc.xdmf"
 extra_restriction_dir : "exterior_restriction.rtc.xdmf"
+output_dir            : "results/ncells_50_size_10000/"
 
 ecs_tags : 1
 ics_tags : [2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18,
             19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35,
             36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51]
-membrane_tags: [2,   3,   4,   5,   6,   7,   8,   9,  10,  11,  12,  13,
-        14,  15,  16,  17,  18,  19,  20,  21,  22,  23,  24,  25,  26,
-        27,  28,  29,  30,  31,  32,  33,  34,  35,  36,  37,  38,  39,
-        40,  41,  42,  43,  44,  45,  46,  47,  48,  49,  50,  51]
 
-phi_M_init : '0.5*sin(10*(x[0]*x[0] + x[1]*x[1]))'
+phi_M_init : '0.5*sin(10*(x[0]*x[0] + x[1]*x[1] + x[2]*x[2]))'
 
